name:                clump
version:             0.1.0.0
license-file:        LICENSE
author:              Flaviu Andrei Csernik (archblob)
maintainer:          fcsernik@gmail.com
build-type:          Simple

-- Extra files to be distributed with the package, such as examples or a 
-- README.
-- extra-source-files:  
cabal-version:       >=1.10


executable clump_mv
  main-is:          ClumpMV.hs
  ghc-options:      -O2 -Wall -fwarn-name-shadowing -fprof-auto "-with-rtsopts= -p -s -h -i0.1"
  other-modules:    Common      
  other-extensions: BangPatterns
  build-depends:    base       >=4.8 && <4.9,
                    containers >=0.5 && <0.6,
                    vector, bytestring, deepseq
  hs-source-dirs:   src
  default-language: Haskell2010

executable clump_im
  main-is:          ClumpIM.hs
  ghc-options:      -O2 -Wall -fwarn-name-shadowing -fprof-auto "-with-rtsopts= -p -s -h -i0.1"
  other-modules:    Common
  other-extensions: BangPatterns
  build-depends:    base       >=4.8 && <4.9,
                    containers >=0.5 && <0.6,
                    bytestring,
                    deepseq
  hs-source-dirs:   src
  default-language: Haskell2010
